<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trackHolder"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/layout_track_border">

    <TextView
        android:id="@+id/textTrackName"
...
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textVolumeText"
        app:layout_constraintTop_toTopOf="@+id/textVolumeText" />

    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
